[package]
authors = ["Niels Egberts <github@nielsegberts.nl>"]
description = "A library that wraps over the Monzo API in a future aware manner."
homepage = "https://github.com/nielsegberts/rust-monzo"
license = "MIT"
license-file = "LICENSE"
name = "monzo"
readme = "README.md"
repository = "https://github.com/nielsegberts/rust-monzo"
version = "0.0.1"

[dependencies]
error-chain = "0.10.0"
futures = "0.1.15"
hyper = "0.11.2"
hyper-tls = "0.1.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
tokio-core = "0.1.9"
url = "1.5.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dev-dependencies]
mockito = "0.9.0"
spectral = "0.6.0"
