[package]
authors = ["Niels Egberts <github@nielsegberts.nl>"]
categories = ["api-bindings"]
description = "A library that wraps over the Monzo API in a future aware manner."
homepage = "https://github.com/nielsegberts/rust-monzo"
license = "MIT"
license-file = "LICENSE"
name = "monzo"
readme = "README.md"
repository = "https://github.com/nielsegberts/rust-monzo"
version = "0.0.2"

[badges.travis-ci]
repository = "nielsegberts/rust-monzo"

[dependencies]
error-chain = "0.11.0"
futures = "0.1.17"
hyper = "0.11.6"
hyper-tls = "0.1.2"
serde = "1.0.18"
serde_derive = "1.0.18"
serde_json = "1.0.5"
tokio-core = "0.1.10"
url = "1.6.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dev-dependencies]
mockito = "0.9.0"
spectral = "0.6.0"
